# langcards

./: .coverage  .env_example  .gitignore  Dockerfile  docker-compose.yml  entrypoint-dev.sh  entrypoint-prod.sh  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yaml  deploy.yaml  django-test.yaml  test.txt
core/: .coverage
core/cards/: admin.py  apps.py  factories.py  mixins.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
core/cards/migrations/: 0001_initial.py  0002_rename_tranlsation_card_translation.py  0003_cardprogress.py  0004_cardprogress_ease_cardprogress_interval.py  0005_alter_card_deck.py  0006_cardprogress_priority_alter_cardprogress_due_and_more.py  0007_card_description.py  0008_deck_default_deck_user.py  0009_cardadditionalimage.py  0010_learninglog.py  0011_alter_cardprogress_interval_and_more.py  0012_deck_image.py  0013_card_image_hash_cardadditionalimage_image_hash_and_more.py  0013_remove_cardprogress_interval.py  0014_merge_20231020_1603.py  0015_remove_card_image_hash_and_more.py  0016_hashedimage_card_hashed_image_and_more.py  0017_alter_cardprogress_ease_learntoday.py
core/cards/tests/: conftest.py  mixins.py  test_api.py
core/core/: celery.py  fields.py  middleware.py  settings.py  urls.py  utils.py
core/core/settings/: base.py  dev.py  example_prod.py
core/social/: admin.py  factories.py  models.py  pagination.py  serializers.py  urls.py  views.py
core/social/tests/: test_api.py
core/user/: admin.py  authentication.py  factories.py  models.py  serializers.py  urls.py  views.py
(+8 files in other folders)
